# multi_python_logger

./: LICENSE  README.md  __init__.py  logger.py  multi_python_logger.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
mp_logger_src/: __init__.py  aws_logger.py  base_logger.py  file_logger.py  mongodb_logger.py
multi_python_logger/: __init__.py  aws_logger.py  base_logger.py  file_logger.py  logger.py
src/: __init__.py  aws_logger.py  base_logger.py  file_logger.py
