[project]
name = "multi_python_logger"
version = "0.0.1"
authors = [
  { name="Mohamed Naji Aboo", email="aboonaji@gmail.com" },
]
description = "Python Multi Logger"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = ""
Issues = ""